--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "codeql-custom"]
 	path = codeql-custom
 	url = https://github.com/github/vscode-codeql-starter
+[submodule "queries"]
+	path = queries
+	url = https://github.com/github/codeql
+[submodule "queries-go"]
+	path = queries-go
+	url = https://github.com/github/codeql-go
